--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -8,16 +8,49 @@
   cursor: pointer;
   transition: background-color 0.3s;
   border-radius: 5px;
-
-  /* ... existing button styles ... */
   border-bottom: 3px solid #381815;
-  /* A darker shade for 3D effect */
   position: relative;
-  /* Required for the top movement on hover */
   transition: all 1.1s ease;
-  /* Transition for all properties */
 
   &:hover {
     transform: scale(1.05);
+  }
+
+  &-slow {
+    background-color: rgba(0, 0, 255, 0.2);
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border-radius: 5px;
+    border-bottom: 3px solid #381815;
+    position: relative;
+    transition: all 1.1s ease;
+    width: max-content;
+    padding: 15px 25px;
+    font-size: 18px;
+    color: #333333;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  &-fast {
+    background-color: rgba(255, 255, 0, 0.2);
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border-radius: 5px;
+    border-bottom: 3px solid #381815;
+    position: relative;
+    transition: all 1.1s ease;
+    width: max-content;
+    padding: 15px 25px;
+    font-size: 18px;
+    color: #333333;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
