--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,6 +4,17 @@
   display: flex;
   gap: 20px;
 
+  &__content {
+    padding-bottom: 20px;
+  }
+
+  &__row {
+    margin-top: 10px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+  }
+
   @media (max-width: 940px) {
     flex-direction: column;
   }
