--- a/src/style/piano-roll.scss
+++ b/src/style/piano-roll.scss
@@ -18,6 +18,12 @@
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
+    transition: all 0.3s ease, background-color 0.3s;
+
+    &:hover {
+      background-color: rgba(128, 255, 0, 0.2);
+
+    }
   }
 
   &__svg {
@@ -33,6 +39,6 @@
   &__svg-active {
     border: 2px solid #381815;
     width: 80%;
-    height: 60vh;
+    height: 400px;
   }
 }
